# wiki-postbot

./: .gitignore  README.md  pyproject.toml
clients/twitter.py/: bot.py
docs/: todo.md
tests/: test_commands.py
tests/test_patterns/: test_wikilinks.py
wiki_postbot/: __init__.py  bot.py  creds.py  logger.py  main.py  patterns.py  service.py  thread.py
wiki_postbot/actions/: __init__.py  action.py  checks.py  commands.py  inline.py
wiki_postbot/clients/: __init__.py  discord_client.py
wiki_postbot/formats/: wiki.py
wiki_postbot/interfaces/: __init__.py  interface.py  mediawiki.py
wiki_postbot/patterns/: __init__.py  patterns.py  wikilink.py
wiki_postbot/templates/: wiki.py
