[tool.poetry]
name = "wiki-postbot"
version = "0.1.0"
description = "Add posts to the wiki!"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "GPL-3.0"
packages = [
    { include="wiki_postbot" }
]

[tool.poetry.scripts]
wikipostbot = "wiki_postbot.main:main"

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.10.0"
rich = "^12.4.4"
parse = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
