[tool.poetry]
name = "wiki-postbot"
version = "0.1.0"
description = "Add posts to the wiki!"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "GPL-3.0"
packages = [
    { include="wiki_postbot" }
]

[tool.poetry.scripts]
wikipostbot = "wiki_postbot.main:main"
discord_bot = "wiki_postbot.clients.discord_client:main"
install_discord_bot = "wiki_postbot.service:main"

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.10.0"
rich = "^12.4.4"
parse = "^1.19.0"
pywikibot = "^7.7.0"
pyparsing = "^3.0.9"
"discord.py" = "^2.0.1"
wikitextparser = "^0.51.1"
certifi = "^2022.9.24"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Faker = "^15.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
